src/character/race/snapshots/bag_of_tricks__character__race__halfling__tests__snapshot.snap
---
source: src/character/race/halfling.rs
expression: halfling

---
- type: Halfling
  subrace: Ghostwise
- Trym Greenbottle
- age: 104
  base_speeds:
    - Walking: 25
  ethnicity: ~
  gender: Female
  height: 36
  size: Small
  weight: 40

