src/character/race/snapshots/bag_of_tricks__character__race__halfling__tests__snapshot_abilities-2.snap
---
source: src/character/race/halfling.rs
expression: halfling.abilities()
---
- - Dexterity
  - 2
- - Constitution
  - 1
