src/character/race/snapshots/bag_of_tricks__character__race__halfling__tests__snapshot_abilities.snap
---
source: src/character/race/halfling.rs
expression: "HalflingSubrace::iter().map(|subrace|\n                                (Halfling{subrace,}).abilities()).collect::<Vec<Vec<AbilityScore>>>()"

---
- - - Dexterity
    - 2
  - - Wisdom
    - 1
- - - Dexterity
    - 2
  - - Charisma
    - 1
- - - Dexterity
    - 2
  - - Constitution
    - 1
- - - Dexterity
    - 2
  - - Constitution
    - 1

