src/character/race/snapshots/bag_of_tricks__character__race__halfling__tests__snapshot_citations-2.snap
---
source: src/character/race/halfling.rs
expression: halfling.citations()
---
- - PHB
  - 26
- - PHB
  - 28
