src/character/race/snapshots/bag_of_tricks__character__race__halfling__tests__snapshot_citations.snap
---
source: src/character/race/halfling.rs
expression: "HalflingSubrace::iter().map(|subrace|\n                                (Halfling{subrace,}).citations()).collect::<Vec<CitationList>>()"

---
- - - PHB
    - 26
  - - PHB
    - 28
- - - PHB
    - 26
  - - PHB
    - 28

