src/character/race/snapshots/bag_of_tricks__character__race__halfling__tests__snapshot_display.snap
---
source: src/character/race/halfling.rs
expression: "format!(\"{}\", halfling)"
---
Lightfoot Halfling
