src/character/race/snapshots/bag_of_tricks__character__race__halfling__tests__snapshot_features.snap
---
source: src/character/race/halfling.rs
expression: halfling.features()
---
- title: Brave
  citation:
    - PHB
    - 28
- title: Halfling Nimbleness
  citation:
    - PHB
    - 28
- title: Naturally Stealthy
  citation:
    - PHB
    - 28
